<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>

    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered FroYo.</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="droid_desserts">Droid Desserts</string>
    <string name="donut_desc">Pink frosted donuts with candy sprinkles on top.</string>
    <string name="sandwich_desc">Ice cream sandwiches with chocolate wafers and vanilla ice cream filling.</string>
    <string name="froyo_desc">Premium frozen yogurt with fruit and candy toppings.</string>
    <string name="name_hint">Enter name</string>
    <string name="name_label">Name:</string>
    <string name="address_label">Address:</string>
    <string name="address_hint">Enter Address</string>
    <string name="phone_hint">Enter Phone Number</string>
    <string name="phone_label">Phone:</string>
    <string name="note_hint">Enter a note (optional)</string>
    <string name="note_label">Note:</string>
    <string name="delivery_label">Choose a delivery method:</string>
    <string name="sameday">Same day messenger service</string>
    <string name="nextDay">Next day ground delivery</string>
    <string name="pickup">Pick up</string>
    <string name="submit_order">Submit Order</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favorites</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="account_sync_header">Account &amp; Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string-array name="pref_market_title">
        <item>United States</item>
        <item>Canada</item>
        <item>United Kingdom</item>
        <item>India</item>
        <item>Japan</item>
        <item>Russia</item>
        <item>China</item>
    </string-array>
    <string-array name="pref_market_values">
        <item>US</item>
        <item>CA</item>
        <item>UK</item>
        <item>IND</item>
        <item>JAP</item>
        <item>RU</item>
        <item>CHN</item>
    </string-array>
    <string name="account_title">Market</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <string name="settings">Settings</string>
</resources>
