<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.amwallace.droidcafe.MainActivity">
    <item
        android:id="@+id/action_contact"
        android:title="@string/action_contact"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_order"
        android:title="@string/action_order"
        android:icon="@drawable/ic_shopping_cart"
        android:orderInCategory="10"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_status"
        android:orderInCategory="20"
        android:icon="@drawable/ic_status"
        android:title="@string/action_status"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="30"
        android:title="@string/action_favorites"
        android:icon="@drawable/ic_favorites"
        app:showAsAction="ifRoom" />

</menu>
