<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <TextView
        android:id="@+id/orderTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Your Order:"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/orderNameEdt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderTxt" />

    <TextView
        android:id="@+id/nameLabelTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/name_label"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/orderNameEdt"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/orderNameEdt" />

    <EditText
        android:id="@+id/orderAddressEdt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/address_hint"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderNameEdt" />

    <TextView
        android:id="@+id/addressLabelTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_label"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/orderAddressEdt"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/orderAddressEdt" />

    <EditText
        android:id="@+id/orderPhoneEdt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderAddressEdt" />

    <TextView
        android:id="@+id/phoneLabelTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/phone_label"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/orderPhoneEdt"
        app:layout_constraintHorizontal_bias="0.746"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/orderPhoneEdt" />

    <EditText
        android:id="@+id/orderNoteEdt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/note_hint"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderPhoneEdt" />

    <TextView
        android:id="@+id/noteLabelTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_label"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/orderNoteEdt"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/orderNoteEdt" />

    <TextView
        android:id="@+id/deliveryLabelTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/delivery_label"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderNoteEdt" />

    <RadioGroup
        android:id="@+id/deliveryRadioGroup"
        android:layout_width="154dp"
        android:layout_height="119dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deliveryLabelTxt"
        app:layout_constraintVertical_bias="0.01999998">

        <RadioButton
            android:id="@+id/sameDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/sameday" />

        <RadioButton
            android:id="@+id/nextDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/nextDay" />

        <RadioButton
            android:id="@+id/pickup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/pickup" />

    </RadioGroup>

    <Button
        android:id="@+id/submitOrderBtn"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginBottom="304dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/submit_order"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toEndOf="@+id/deliveryRadioGroup"
        app:layout_constraintTop_toTopOf="@+id/deliveryRadioGroup"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/cancelOrderBtn"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/cancel_order"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toEndOf="@+id/deliveryRadioGroup"
        app:layout_constraintTop_toBottomOf="@+id/submitOrderBtn"
        app:layout_constraintVertical_bias="0.024" />
</androidx.constraintlayout.widget.ConstraintLayout>