<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <ImageView
        android:id="@+id/donutImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/donut_desc"
        android:onClick="orderDonut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/froyoImg"
        app:srcCompat="@drawable/donut_circle" />

    <TextView
        android:id="@+id/dessertsTitleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/droid_desserts"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/sandwichImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/sandwich_desc"
        android:onClick="orderSandwich"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dessertsTitleTxt"
        app:srcCompat="@drawable/icecream_circle" />

    <ImageView
        android:id="@+id/froyoImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/froyo_desc"
        android:onClick="orderFroyo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sandwichImg"
        app:srcCompat="@drawable/froyo_circle" />

    <TextView
        android:id="@+id/sandwichTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/sandwich_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sandwichImg"
        app:layout_constraintTop_toTopOf="@+id/sandwichImg" />

    <TextView
        android:id="@+id/froyoTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/froyo_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/froyoImg"
        app:layout_constraintTop_toTopOf="@+id/froyoImg" />

    <TextView
        android:id="@+id/donutTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/donut_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/donutImg"
        app:layout_constraintTop_toTopOf="@+id/donutImg" />

    <TextView
        android:id="@+id/sandwhichQtyTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="Qty: "
        app:layout_constraintStart_toEndOf="@+id/sandwichImg"
        app:layout_constraintTop_toBottomOf="@+id/sandwichTxt" />

    <TextView
        android:id="@+id/froyoQtyTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="Qty: "
        app:layout_constraintStart_toEndOf="@+id/froyoImg"
        app:layout_constraintTop_toBottomOf="@+id/froyoTxt" />

    <TextView
        android:id="@+id/donutQtyTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="Qty: "
        app:layout_constraintStart_toEndOf="@+id/donutImg"
        app:layout_constraintTop_toBottomOf="@+id/donutTxt" />
</androidx.constraintlayout.widget.ConstraintLayout>
